# lla-data

./: .gitignore  AGENTS.md  INFO.md  README.md  lifeline_theme.py  notes.md  pyproject.toml  sxo-strategy-proposal.md
data/: experiments.csv
docs/: REPORT1.md  REPORT1_next_steps.md  REPORT1_sxo_experiment_pitch.md  ga4-bigquery-access-guardrails.md  ga4-bigquery-incident-2026-03.md  ga4-databricks-integration-checklist.md  notebook-usage-guide.md  searchconsole-data-dictionary.md  searchconsole-historical-backfill.md  seo-first-run-checklist.md  seo-metrics-definitions.md
lla-brand/: LIFE0043-Lifeline-Australia-Beige-RGB.eps  LIFE0043-Lifeline-Australia-Black-RGB.eps  LIFE0043-Lifeline-Australia-Blue-RGB.eps  LIFE0043-Lifeline-Australia-White-RGB.eps  LIFE0043-Lifeline-Brandmark-Beige-RGB.eps  LIFE0043-Lifeline-Brandmark-Black-RGB.eps  LIFE0043-Lifeline-Brandmark-Blue-RGB.eps  LIFE0043-Lifeline-Brandmark-White-RGB.eps  README.md
lla_data/: __init__.py  bq.py  config.py  dataforseo.py  google_ads_keywords.py  url_utils.py
meetings/: SEO-weekly-1.md  vtt_to_md.py
notebooks/: 01_search_contribution_overview.ipynb  02_top_pages_search_performance.ipynb  03_query_drivers_by_page.ipynb  04_opportunity_watchlist.ipynb  05_traffic_sources.ipynb  06_time_patterns.ipynb  07_top_search_queries_sitewide.ipynb  08_sxo_page_query_dynamics.ipynb  09_explore_performance_for_page_set.ipynb  10_digital_support_outbound_clicks.ipynb  11_volunteer_funnel.ipynb  12_crisis_supporter_journey.ipynb  13_support_articles_engagement_scatter.ipynb  14_keyword_expansion_from_page.ipynb  (+12 more)
(+145 files in other folders)
